// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dsh terminal journey snapshots > / menu lists a staged skill and a pick submits it as a prompt 1`] = `
"       ▄  ▄▄▄    ▄▄
  ▄▄█████████▄   ███▄ ▄▄▄█
 ██████████████▄  ███████     DeepSeek Harness v<version>
██▀▀▀████████████▄ ███▀▀      deepseek-official/deepseek-v4-flash
██     ▀▀█████▄ ██████        <cwd>
██        ▀████▄ ████         workspace-write
 ██         ████████▀         / for commands · @ to mention · ctrl+c to leave
 ▀██▄    ▄▄  ▀████▀
   ▀███▄▄███▄▄ ▀███▄▄
     ▀▀▀█████▀▀

› /journey-skill


◆ Mock model answering the terminal.










                ────────────────────────────────────────────────────────────────────────────────────
› / for commands
                ────────────────────────────────────────────────────────────────────────────────────

 ● ready · workspace-write · deepseek-official/deepseek-v4-flash · 13.2k/1000.0k (1%)"
`;

exports[`dsh terminal journey snapshots > /help lists the live command registry as text 1`] = `
"       ▄  ▄▄▄    ▄▄
  ▄▄█████████▄   ███▄ ▄▄▄█
 ██████████████▄  ███████     DeepSeek Harness v<version>
██▀▀▀████████████▄ ███▀▀      deepseek-official/deepseek-v4-flash
██     ▀▀█████▄ ██████        <cwd>
██        ▀████▄ ████         workspace-write
 ██         ████████▀         / for commands · @ to mention · ctrl+c to leave
 ▀██▄    ▄▄  ▀████▀
   ▀███▄▄███▄▄ ▀███▄▄
     ▀▀▀█████▀▀

/compact — Compact older conversation history
/exit — Leave the terminal session
/feedback <text> — record feedback about this session
/goal [<objective>|clear|edit <objective>|pause|resume] — set or view the goal for a long-running
task
/help — List the commands this terminal resolves
/model [provider/model] — Show or switch the model this session uses
/permission <preset> — Switch the permission preset (sandbox mode + approval policy)
/plan [off|message] — Enter or leave plan mode
/quit — Leave the terminal session




                ────────────────────────────────────────────────────────────────────────────────────
› / for commands
                ────────────────────────────────────────────────────────────────────────────────────

 ● ready · workspace-write · deepseek-official/deepseek-v4-flash · 0 tokens"
`;

exports[`dsh terminal journey snapshots > /model <route> <effort> rejects an unknown effort at pick time naming what is available 1`] = `
"       ▄  ▄▄▄    ▄▄
  ▄▄█████████▄   ███▄ ▄▄▄█
 ██████████████▄  ███████     DeepSeek Harness v<version>
██▀▀▀████████████▄ ███▀▀      deepseek-official/deepseek-v4-flash
██     ▀▀█████▄ ██████        <cwd>
██        ▀████▄ ████         workspace-write
 ██         ████████▀         / for commands · @ to mention · ctrl+c to leave
 ▀██▄    ▄▄  ▀████▀
   ▀███▄▄███▄▄ ▀███▄▄
     ▀▀▀█████▀▀

unknown effort "turbo" for deepseek-official/deepseek-v4-pro; available: default, off, high, max













                ────────────────────────────────────────────────────────────────────────────────────
› / for commands
                ────────────────────────────────────────────────────────────────────────────────────

 ● ready · workspace-write · deepseek-official/deepseek-v4-flash · 0 tokens"
`;

exports[`dsh terminal journey snapshots > /model <route> <effort> selects directly and reports the pinned effort 1`] = `
"       ▄  ▄▄▄    ▄▄
  ▄▄█████████▄   ███▄ ▄▄▄█
 ██████████████▄  ███████     DeepSeek Harness v<version>
██▀▀▀████████████▄ ███▀▀      deepseek-official/deepseek-v4-flash
██     ▀▀█████▄ ██████        <cwd>
██        ▀████▄ ████         workspace-write
 ██         ████████▀         / for commands · @ to mention · ctrl+c to leave
 ▀██▄    ▄▄  ▀████▀
   ▀███▄▄███▄▄ ▀███▄▄
     ▀▀▀█████▀▀

Model switched to deepseek-official/deepseek-v4-pro (reasoning off)













                ────────────────────────────────────────────────────────────────────────────────────
› / for commands
                ────────────────────────────────────────────────────────────────────────────────────

 ● ready · workspace-write · deepseek-official/deepseek-v4-pro · 0 tokens"
`;

exports[`dsh terminal journey snapshots > /model drills into a route effort tier and applies the picked effort 1`] = `
"       ▄  ▄▄▄    ▄▄
  ▄▄█████████▄   ███▄ ▄▄▄█
 ██████████████▄  ███████     DeepSeek Harness v<version>
██▀▀▀████████████▄ ███▀▀      deepseek-official/deepseek-v4-flash
██     ▀▀█████▄ ██████        <cwd>
██        ▀████▄ ████         workspace-write
 ██         ████████▀         / for commands · @ to mention · ctrl+c to leave
 ▀██▄    ▄▄  ▀████▀
   ▀███▄▄███▄▄ ▀███▄▄
     ▀▀▀█████▀▀

Model switched to deepseek-official/deepseek-v4-pro (reasoning off)













                ────────────────────────────────────────────────────────────────────────────────────
› / for commands
                ────────────────────────────────────────────────────────────────────────────────────

 ● ready · workspace-write · deepseek-official/deepseek-v4-pro · 0 tokens"
`;

exports[`dsh terminal journey snapshots > /model opens the picker, esc dismisses, and enter applies 1`] = `
"       ▄  ▄▄▄    ▄▄
  ▄▄█████████▄   ███▄ ▄▄▄█
 ██████████████▄  ███████     DeepSeek Harness v<version>
██▀▀▀████████████▄ ███▀▀      deepseek-official/deepseek-v4-flash
██     ▀▀█████▄ ██████        <cwd>
██        ▀████▄ ████         workspace-write
 ██         ████████▀         / for commands · @ to mention · ctrl+c to leave
 ▀██▄    ▄▄  ▀████▀
   ▀███▄▄███▄▄ ▀███▄▄
     ▀▀▀█████▀▀

Model switched to deepseek-official/deepseek-v4-pro (reasoning high)













                ────────────────────────────────────────────────────────────────────────────────────
› / for commands
                ────────────────────────────────────────────────────────────────────────────────────

 ● ready · workspace-write · deepseek-official/deepseek-v4-pro · 0 tokens"
`;

exports[`dsh terminal journey snapshots > /model reports was <effort> when a pick replaces a stored explicit effort 1`] = `
"       ▄  ▄▄▄    ▄▄
  ▄▄█████████▄   ███▄ ▄▄▄█
 ██████████████▄  ███████     DeepSeek Harness v<version>
██▀▀▀████████████▄ ███▀▀      deepseek-official/deepseek-v4-flash
██     ▀▀█████▄ ██████        <cwd>
██        ▀████▄ ████         workspace-write
 ██         ████████▀         / for commands · @ to mention · ctrl+c to leave
 ▀██▄    ▄▄  ▀████▀
   ▀███▄▄███▄▄ ▀███▄▄
     ▀▀▀█████▀▀

Model switched to deepseek-official/deepseek-v4-pro (reasoning off)

Model switched to deepseek-official/deepseek-v4-flash (reasoning high, was off)











                ────────────────────────────────────────────────────────────────────────────────────
› / for commands
                ────────────────────────────────────────────────────────────────────────────────────

 ● ready · workspace-write · deepseek-official/deepseek-v4-flash · 0 tokens"
`;

exports[`dsh terminal journey snapshots > @ menu offers a running child and a pick lands the reference in the composer 1`] = `
"       ▄  ▄▄▄    ▄▄
  ▄▄█████████▄   ███▄ ▄▄▄█
 ██████████████▄  ███████     DeepSeek Harness v<version>
██▀▀▀████████████▄ ███▀▀      deepseek-official/deepseek-v4-flash
██     ▀▀█████▄ ██████        <cwd>
██        ▀████▄ ████         workspace-write
 ██         ████████▀         / for commands · @ to mention · ctrl+c to leave
 ▀██▄    ▄▄  ▀████▀
   ▀███▄▄███▄▄ ▀███▄▄
     ▀▀▀█████▀▀















  ──────────────────────────────────────────────────────────────────────────────────────────────────
›  @journey-child x
  ──────────────────────────────────────────────────────────────────────────────────────────────────

 ● ready · workspace-write · deepseek-official/deepseek-v4-flash · 0 tokens"
`;

exports[`dsh terminal journey snapshots > @ menu offers nothing when no child is running 1`] = `
"       ▄  ▄▄▄    ▄▄
  ▄▄█████████▄   ███▄ ▄▄▄█
 ██████████████▄  ███████     DeepSeek Harness v<version>
██▀▀▀████████████▄ ███▀▀      deepseek-official/deepseek-v4-flash
██     ▀▀█████▄ ██████        <cwd>
██        ▀████▄ ████         workspace-write
 ██         ████████▀         / for commands · @ to mention · ctrl+c to leave
 ▀██▄    ▄▄  ▀████▀
   ▀███▄▄███▄▄ ▀███▄▄
     ▀▀▀█████▀▀















  ──────────────────────────────────────────────────────────────────────────────────────────────────
›  @
  ──────────────────────────────────────────────────────────────────────────────────────────────────

 ● ready · workspace-write · deepseek-official/deepseek-v4-flash · 0 tokens"
`;

exports[`dsh terminal journey snapshots > slash menu opens, filters, and dispatches a pick 1`] = `
"       ▄  ▄▄▄    ▄▄
  ▄▄█████████▄   ███▄ ▄▄▄█
 ██████████████▄  ███████     DeepSeek Harness v<version>
██▀▀▀████████████▄ ███▀▀      deepseek-official/deepseek-v4-flash
██     ▀▀█████▄ ██████        <cwd>
██        ▀████▄ ████         workspace-write
 ██         ████████▀         / for commands · @ to mention · ctrl+c to leave
 ▀██▄    ▄▄  ▀████▀
   ▀███▄▄███▄▄ ▀███▄▄
     ▀▀▀█████▀▀

/compact — Compact older conversation history
/exit — Leave the terminal session
/feedback <text> — record feedback about this session
/goal [<objective>|clear|edit <objective>|pause|resume] — set or view the goal for a long-running
task
/help — List the commands this terminal resolves
/model [provider/model] — Show or switch the model this session uses
/permission <preset> — Switch the permission preset (sandbox mode + approval policy)
/plan [off|message] — Enter or leave plan mode
/quit — Leave the terminal session




                ────────────────────────────────────────────────────────────────────────────────────
› / for commands
                ────────────────────────────────────────────────────────────────────────────────────

 ● ready · workspace-write · deepseek-official/deepseek-v4-flash · 0 tokens"
`;
